--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,7 +17,8 @@
 }
 
 p{
-    margin: 8px 16px;
+    padding: 8px 16px;
+    margin: 0;
 }
 
 .light {
@@ -36,6 +37,17 @@ p{
   display: flex;
   flex-direction: column;
   margin: 30px auto;
+}
+.column {
+  display: block;
+  flex-basis: 0;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.row{
+  display: flex;
+  flex-direction: row;
 }
 
 .nav {
@@ -67,11 +79,20 @@ input {
     padding: 16px;
     margin: 0 16px;
     background: white;
-    border: 2px solid #dfdfdf;
+    border: none;
     border-radius: 20px;
 }
 
 
 input:focus {
     outline: none;
+}
+
+.hover-highlight:hover {
+  cursor: pointer;
+  background: #ebebeb;
+}
+
+.has-padding-16 {
+  padding: 0 20px;
 }
