--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,13 +16,13 @@
   line-height: 24px;
 }
 
-p{
-    padding: 8px 16px;
-    margin: 0;
+p {
+  padding: 8px 16px;
+  margin: 0;
 }
 
 .light {
-    color: #505050;
+  color: #505050;
 }
 
 .container {
@@ -58,7 +58,7 @@ p{
   flex-shrink: 1;
 }
 
-.row{
+.row {
   display: flex;
   flex-direction: row;
 }
@@ -87,18 +87,16 @@ p{
 }
 
 input {
-    position: relative;
-    display: block;
-    padding: 16px;
-    margin: 0 16px;
-    background: white;
-    border: none;
-    border-radius: 20px;
+  position: relative;
+  display: block;
+  width: 96%;
+  padding: 16px;
+  margin: 0 16px;
+  border: none;
 }
 
-
 input:focus {
-    outline: none;
+  outline: none;
 }
 
 .hover-highlight:hover {
@@ -108,4 +106,46 @@ input:focus {
 
 .has-padding-16 {
   padding: 0 20px;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.classroom-background {
+  background: url(./assets/fesb1.jpg) no-repeat center center fixed;
+}
+
+.max-width-800{
+  max-width: 800px;
+}
+
+.auto-top {
+  margin: auto;
+}
+
+.no-margin {
+  margin: 0;
+  padding: 0;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -120px;
+  background: white;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.navbar-padding {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
