created db seeders, UI changes and searchbar fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -108,6 +108,12 @@ input:focus {
   padding: 0 20px;
 }
 
+.has-padding-8 {
+  padding-top: 8px;
+  padding-bottom: 0;
+  margin-bottom: 4px;
+}
+
 .hidden {
   visibility: hidden;
 }
@@ -136,9 +142,10 @@ input:focus {
 .dropdown {
   display: block;
   position: absolute;
+  z-index: 199;
   left: 0;
   right: 0;
-  bottom: -120px;
+  top: 120px;
   background: white;
 }
 
