--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -233,21 +233,29 @@ ol li::before {
   margin-left: 12px;
 }
 
+.wrapText {
+  height: auto !important;
+  white-space: unset !important;
+  width: 100%;
+  word-break: break-all;
+}
+
 .card {
   &.is-horizontal {
     display: flex;
-    
+
     .card-image {
       width: 100%;
       height: 100%;
+      max-width: 300px;
     }
-    
+
     .card-stacked {
       flex-direction: column;
       flex: 1 1 auto;
       display: flex;
       position: relative;
-      
+
       .card-content {
         flex-grow: 1;
       }
